--- a/paywallserver/checkout.html
+++ b/paywallserver/checkout.html
@@ -9,7 +9,7 @@
       integrity="sha512-HY1lApSG7xxx8mYzs/lxRs+c5AaDThRaa3pvQB6puiswvf2lWqMJVf+8qSGiL4ZXfHQoPIqbd1TlpqfycPo3cQ=="
       crossorigin="anonymous"
     ></script>
-    <script src="https://test.checkout.dibspayment.eu/v1/checkout.js?v=1&?paymentId=8b464458f2524bc39fe5d31deb8bedc1&checkoutKey=100019773&language=sv-SE&checkoutKey=test-checkout-key-da42153371ba41c7bf64de4f9c87d252" />
+    <script src="https://test.checkout.dibspayment.eu/v1/checkout.js?v=1&?paymentId=8b464458f2524bec39fe5d31deb8bedc1&checkoutKey=&language=sv-SE&checkoutKey=test-checkout-key-" />
   </head>
   <body translate="no">
     <div id="root"></div>
